--- a/style.css
+++ b/style.css
@@ -311,77 +311,49 @@ span{
 
    
 
+   /** shop section **/
+.shop-section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    background-color: #e2e7e6;
+}
+
+.box {
+    /* border: 2px solid black; */
+    height: 400px;
+    width: 23%;
+    background-color: white;
+    padding: 20px 0px 15px;
+    margin-top: 15px;
+}
+
+.box-img {
+    height: 300px;
+    background-size: cover;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.box-content {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.box-content p{
+  color: #006185;
+  
+}
+
+
+
+
+
    
 
-   /** shop section  **/
 
-     
 
-     .shop-section{
-
-       display: flex;
-
-       flex-wrap: wrap;
-
-       justify-content: space-evenly;
-
-       background-color: #e2e7e6;
-
-       
-
-     }
-
-     
-
-   
-
-     .box{
-
-      /**  border: 2px solid black; **/
-
-       height: 400px;
-
-       width: 23%;
-
-       background-color: white;
-
-       padding: 20px 0px 15px;
-
-       margin-top: 15px ;
-
-     }
-
-     
-
-     .box-image{
-
-       height: 300px;
-
-       background-size: contain;
-
-       margin-bottom: 1rem ;
-
-       margin-top: 1rem ;
-
-       
-
-     }
-
-     
-
-     .box-content{
-
-      margin-left: 1rem;
-
-      margin-right: 1rem;
-
-     }
-
-     .box-content p {
-
-       color: #007185 ;
-
-     }
+  
 
      
 
