--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ span{
 
 .box-img {
     height: 300px;
-    background-size: cover;
+    background-size: fit ;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
